language/move-lang/tests/move_check/parser/let_binding_missing_paren.exp
error: 

   ┌── tests/move_check/parser/let_binding_missing_paren.move:3:13 ───
   │
 3 │         let (x1, x2 = (1, 2);
   │             - To match this '('
   │                     ^ Expected ')'
   │

